Because the frontend also uses port 3000, running both the backend and frontend at the same time results in a port conflict.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Server Configuration
-PORT=3000
+#PORT=3000
+#Because the frontend also uses port 3000, running both the backend and frontend at the same time results in a port conflict.
+PORT=3001 
 NODE_ENV=development
 LOG_LEVEL=info
 
